2001-03-11  Keisuke Nishida  <kxn30@po.cwru.edu>

	* list.c (s_scm_reverse_x): Use SCM_VALIDATE_LIST.

	* environments.c, error.c, eval.c, filesys.c, hashtab.c, load.c,
	net_db.c, procprop.c, read.c, scmsigs.c, socket.c, struct.c:
	Use SCM_LISTn instead of scm_listify.

2001-03-10  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* _scm.h: Removed #include <errno.h>.

	* error.c, net_db.c, putenv.c, stime.c: Removed declaration of
	errno variable (can be a macro on some systems, for example when
	using linux libc with threads).

	* error.c, filesys.c, gc.c, ioext.c, iselect.c, net_db.c, ports.c,
	posix.c, print.c, putenv.c, scmsigs.c, script.c, simpos.c, smob.c,
	socket.c, srcprop.c, stime.c, strop.c, unif.c, vports.c: Added
	#include <errno.h> in these 20 out of 100 files.
	
2001-03-10  Gary Houston  <ghouston@arglist.com>

	* socket.c: add a definition of SUN_LEN (from glibc) for when it's
	not already defined.

2001-03-09  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* coop.c: Inserted #include <stdio.h>.

	* iselect.c: Reinserted #include <stdio.h>.

2001-03-10  Marius Vollmer  <mvo@zagadka.ping.de>

	* posix.c: Replaced `#define' of __USE_XOPEN right before
	including unistd.h with a define of _GNU_SOURCE at the very top of
	the file.

2001-03-09  Keisuke Nishida  <kxn30@po.cwru.edu>

	* alist.c, arbiters.c, async.c, backtrace.c, boolean.c, chars.c,
	continuations.c, debug-malloc.c, debug.c, dynwind.c, eq.c, eval.c,
	feature.c, filesys.h, gc_os_dep.c, gh_data.c, gh_eval.c,
	gh_funcs.c, gh_io.c, gh_list.c, gh_predicates.c, hash.c,
	hashtab.c, iselect.c, keywords.c, list.c, load.c, mallocs.c,
	net_db.c, numbers.c, objprop.c, objprop.h, options.c, pairs.c,
	print.c, procprop.c, procs.c, properties.c, ramap.c,
	regex-posix.c, root.c, scmsigs.c, simpos.c, socket.c, srcprop.c,
	stackchk.c, stacks.c, strings.c, strop.c, strorder.c, struct.c,
	symbols.c, tag.c, threads.c, variable.c, vectors.c, weaks.c:
	Remove #include <stdio.h>	